ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: exam-ingress
  namespace: exam
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: exam.com
    http:  
      paths:
        - path: /
          pathType: Prefix 
          backend:
            service:
              name: exam-frontend
              port: 
                number: 80
